# ride-share

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: entrypoint.sh
src/apps/ride/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/ride/migrations/: 0001_initial.py  0002_rename_distance_km_ride_distance.py  0003_alter_ride_driver.py  0004_remove_ride_deleted_at.py  0005_ride_end_at_ride_start_at.py  0006_alter_ride_cancelled_reason.py
src/apps/users/: models.py  serializers.py  signals.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_avatar_and_more.py  0003_rename_first_name_user_firstname_and_more.py  0004_remove_user_created_location_and_more.py  0005_user_is_driver_alter_user_id.py  0006_alter_user_id.py  0007_alter_user_id.py  0008_alter_user_id.py  0009_alter_user_id.py  0010_alter_user_id.py
src/core/: env.py  urls.py
src/core/settings/: base.py  dev.py  prod.py
src/db/: base.py  manager.py  mixins.py  queryset.py
src/db/management/commands/: activate_user.py  reset_password.py
src/utils/: ip_addresses.py  timezone_conveter.py  valid_uuid.py
